<resources>
    <string name="app_name">SanFirebaseDBHandler</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_register_user">RegisterUser</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="type_text_here">Type text here</string>
</resources>
