<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ac.RegisterUser">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="51dp"
        android:text="@string/user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/ed_email"
        app:layout_constraintStart_toStartOf="@+id/ed_email"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="137dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/ed_password"
        app:layout_constraintStart_toStartOf="@+id/ed_password"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/email"
        app:layout_constraintBaseline_toBaselineOf="@+id/ed_email"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/password"
        app:layout_constraintBaseline_toBaselineOf="@+id/ed_password"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_email" />

    <Button
        android:onClick="signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="58dp"
        android:layout_marginTop="54dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="@+id/ed_password"
        app:layout_constraintTop_toBottomOf="@+id/ed_password" />
</android.support.constraint.ConstraintLayout>